Fixing contrast and adding JS

--- a/css/main.css
+++ b/css/main.css
@@ -100,13 +100,13 @@ textarea {
 }
 body{
   font-family:  Courier, "Lucida Console", monospace;
-  background-image: url("../img/biblio.JPG");
+  background-image: url("../img/versioning.JPG");
   background-repeat: no-repeat;
   background-size: cover;
-
 }
+
 header{
-  background-color: #ff8c00;
+  background-color: #FFE;
   border-bottom: 1px solid  #1e90ff;
 }
 img{
@@ -167,9 +167,8 @@ section{
   padding: 6px;
   margin-bottom: 5px;
   opacity:0.8;
-}
-.lateralnav{
   text-decoration: none;
+  background-color: #7fffd4;
 }
 footer{
     border-top: 1px solid  #1e90ff;
@@ -205,7 +204,7 @@ h2,h3,h4{
 h3,span,.commande{
   font-style: italic;
 }
-.lateralnav,.conseil,.enTete{
+.conseil,.enTete{
   background-color: darkorange;
 }
 .commande{
